syntax = "proto3";

package com.woodpigeon.b3.schema;


message OffsetMap {
    map<string, uint32> offsets = 1;
}


message Payload {
    repeated EventList eventLists = 1;
}

message Event {
    uint32 version = 2;
    oneof inner {
        AddNote addNote = 7;
        PutProduct putProduct = 8;
    }
}


message EventList {
    string ref = 1;
    repeated Event events = 2;
}


message NoteList {
    repeated string notes = 1;
}

message AddNote {
    string note = 1;
}


message PutProduct {
    string productId = 1;
    string name = 2;
}

message DeleteProduct {
    string productId = 1;
}

message PutStock {
    string productId = 1;
}

message PutImage {
    string entityId = 1;
    string url = 2;
}

